# DeepwokenHelper

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: races.json
deepwokenhelper/: __init__.py  __main__.py  data.py  ocr.py  version_check.py
deepwokenhelper/gui/: application.py  cards_area.py  control_panel.py
src/: data.py  gui.py  ocr.py  version_check.py
