[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "DeepwokenHelper"
version = "1.0.2"
description = "Deepwoken Helper to help you choose your cards."
authors = [ "Tuxsuper <69093264+Tuxsupa@users.noreply.github.com>",]
license = "GPL-3.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.7.0"
opencv-python = "^4.9.0.80"
pywin32 = "^306"
pytesseract = "^0.3.10"
requests = "^2.32.3"
imutils = "^0.5.4"
keyboard = "^0.13.5"
ultralytics = "^8.2.28"
WMI = "^1.5.1"
onnx = "^1.16.1"
onnxruntime = "^1.18.0"
toml = "^0.10.2"

[tool.ruff.lint]
ignore = [ "F405", "F403",]

[tool.poetry.dependencies.qtwaitingspinner]
git = "https://github.com/z3ntu/QtWaitingSpinner.git"
